--- a/aboutme.html
+++ b/aboutme.html
@@ -33,14 +33,14 @@
 					<p class="about">
 					Software Engineer, Data Geek, Music Enthusiast, Food Lover.
 					</p>
-				</div>
-				<div class="navcontainer">
-					<nav class="navbox">
-						<a href="./index.html">projects</a>
-						<a class="active" href="./aboutme.html">about me</a>
-						<a href="./experience.html">experience</a>
-						<!-- <a href="">contact me</a> -->
-					</nav>
+					<div class="navcontainer">
+						<nav class="navbox">
+							<a href="./index.html">projects</a>
+							<a class="active" href="./aboutme.html">about me</a>
+							<a href="./experience.html">experience</a>
+							<!-- <a href="">contact me</a> -->
+						</nav>
+					</div>
 				</div>
 			</div>
 			<!-- Left Pannel -->
@@ -49,7 +49,7 @@
 					<h1>About Me</h1>
 					<hr>
 					<p>
-						I’m currently a Data Engineer based in Rochester NY. I graduated from SUNY Brockport with a B.S. in Computer Science where I developed a deep passion for programming, primarily learning and developing in Java. Since then, I’ve chased that passion by working to become a better developer everyday, while contributing to my company by implementing data solutions for a variety of meaningful and interesting projects.<br>
+						I’m currently a Data Engineer based in Rochester NY. I graduated from SUNY Brockport with a B.S. in Computer Science where I developed a deep passion for programming. Since then, I’ve chased that passion by working to become a better developer everyday, while contributing to my company by implementing data solutions for a variety of meaningful and interesting projects.<br>
 						<br>
 						I have a love for building useful things through programming, whether that be scripts, websites, dashboards, or anything in-between. Learning new technologies is a hobby of mine, and my recent projects have given me experience using Javascript, React, Python, Django, R, HTML & CSS.<br>
 						<br>
