--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
 					<p class="about">
 					Software Engineer, Data Geek, Music Enthusiast, Food Lover.
 					</p>
-				</div>
-				<div class="navcontainer">
-					<nav class="navbox">
-						<a class="active" href="./index.html">projects</a>
-						<a href="./aboutme.html">about me</a>
-						<a href="./experience.html">experience</a>
-<!-- 						<a href="">contact me</a>
- -->					</nav>
+					<div class="navcontainer">
+						<nav class="navbox">
+							<a href="./index.html">projects</a>
+							<a class="active" href="./aboutme.html">about me</a>
+							<a href="./experience.html">experience</a>
+							<!-- <a href="">contact me</a> -->
+						</nav>
+					</div>
 				</div>
 			</div>
 			<!-- Left Pannel -->
