--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,7 @@
 	<title>Justin's Website</title>
 	<link href="https://fonts.googleapis.com/css?family=Heebo:500,700|Montserrat:500,600" rel="stylesheet">
 	<!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style3.css">
 </head>
 <body>
 	<div id="particles-js"></div>
