--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Justin's Website</title>
 	<link href="https://fonts.googleapis.com/css?family=Heebo:500,700|Montserrat:500,600" rel="stylesheet">
 	<!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style3.css">
 	<script src="https://kit.fontawesome.com/c00383acba.js" crossorigin="anonymous"></script>
 </head>
 <body>
